--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -29,5 +29,35 @@ body {
     justify-content: space-between;
     align-items: center;
     min-height: 100%;
+
+    main {
+      width: 100%;
+      flex-grow: 1;
+    }
+
+    footer {
+      width: 100%;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $color-2;
+      flex-shrink: 0;
+      
+      a {
+        color: $color-2;
+        display: inline-flex;
+        margin: 1px 0 0 5px;
+
+        svg {
+          height: 16px;
+          width: 16px;
+        }
+
+        &:hover {
+          color: black;
+        }
+      }
+    }
   }
 }
