--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,4 @@ $border: #DDDDDD;
 $background: #f5f5f5;
 $empty: rgba($color: #000000, $alpha: 0.04);
 $error: #d32f2f;
+$shadow: 0 1px 3px rgba(0,0,0,0.22), 0 1px 2px rgba(0,0,0,0.34);
