--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 @import "./variables";
+@import "./mixins";
 
 h1, h2, h3, h4, h5, h6, p, img {
   margin: 0;
@@ -24,25 +25,26 @@ body {
   background: $background;
 
   #root {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100%;
+    @include flexbox;
+    width: 100%;
+    height: 100%;
 
     main {
-      width: 100%;
-      flex-grow: 1;
+      width: 700px;
+      height: 80%;
+      border-radius: 25px;
+      background: white;
+      box-shadow: $shadow;
+      @include flexbox;
     }
 
     footer {
       width: 100%;
       height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flexbox;
       color: $color-2;
-      flex-shrink: 0;
+      position: absolute;
+      bottom: 0;
       
       a {
         color: $color-2;
