--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -5,7 +5,6 @@
 h1, h2, h3, h4, h5, h6, p, img {
   margin: 0;
   user-select: none;
-  font-weight: 300;
 }
 
 a {
@@ -33,21 +32,67 @@ body {
       width: 700px;
       height: 80%;
       border-radius: 25px;
-      background: white;
+      background: $elemBackground;
       box-shadow: $shadow;
       @include flexbox;
+      flex-flow: column nowrap;
+      justify-content: space-between;
+      overflow: hidden;
+
+      nav {
+        width: 100%;
+        height: 60px;
+        @include flexbox;
+        justify-content: flex-start;
+        background: white;
+        box-sizing: border-box;
+        padding: 0 20px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.35);
+        position: relative;
+
+        .nav-item-indicator {
+          position: absolute;
+          height: 2px;
+          bottom: 0;
+          width: 100%;
+          -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+          transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+          background-color: #1976d2;
+        }
+
+        .nav-item {
+          height: 100%;
+          padding: 0 20px;
+          @include flexbox;
+          cursor: pointer;
+          color: $colour-4;
+          position: relative;
+        
+          p {
+            pointer-events: none;
+          }
+        
+          &:hover {
+            color: black;
+          }
+        }
+      }
     }
 
     footer {
       width: 100%;
       height: 50px;
       @include flexbox;
-      color: $color-2;
+      color: $colour-3;
       position: absolute;
       bottom: 0;
+
+      h5 {
+        font-weight: 500;
+      }
       
       a {
-        color: $color-2;
+        color: $colour-3;
         display: inline-flex;
         margin: 1px 0 0 5px;
 
