--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,6 +1,6 @@
+@use "variables";
+@use "mixins";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
-@import "./variables";
-@import "./mixins";
 
 h1, h2, h3, h4, h5, h6, p, img {
   margin: 0;
@@ -21,10 +21,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Ubuntu', sans-serif;
-  background: $background;
+  background: variables.$background;
 
   #root {
-    @include flexbox;
+    @include mixins.flexbox;
     width: 100%;
     height: 100%;
 
@@ -32,9 +32,9 @@ body {
       width: 700px;
       height: 80%;
       border-radius: 25px;
-      background: $elemBackground;
-      box-shadow: $shadow;
-      @include flexbox;
+      background: variables.$elemBackground;
+      box-shadow: variables.$shadow;
+      @include mixins.flexbox;
       flex-flow: column nowrap;
       justify-content: space-between;
       overflow: hidden;
@@ -42,7 +42,7 @@ body {
       nav {
         width: 100%;
         height: 60px;
-        @include flexbox;
+        @include mixins.flexbox;
         justify-content: flex-start;
         background: white;
         box-sizing: border-box;
@@ -55,8 +55,8 @@ body {
     footer {
       width: 100%;
       height: 50px;
-      @include flexbox;
-      color: $colour-3;
+      @include mixins.flexbox;
+      color: variables.$colour-3;
       position: absolute;
       bottom: 0;
 
@@ -65,7 +65,7 @@ body {
       }
       
       a {
-        color: $colour-3;
+        color: variables.$colour-3;
         display: inline-flex;
         margin: 1px 0 0 5px;
 
