--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $colour-3: #9E9E9E;
 $colour-4: #747474;
 $colour-6: #525252;
 $colour-9: #151515;
+$pirelli-red: #ef242d;
 $empty: rgba($color: #000000, $alpha: 0.04);
 $error: #d32f2f;
 $shadow: 0 1px 3px rgba(0,0,0,0.22), 0 1px 2px rgba(0,0,0,0.34);
