--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -50,6 +50,12 @@ body {
         box-shadow: 0 1px 3px rgba(0,0,0,0.35);
         position: relative;  
       }
+
+      .content-container {
+        width: 100%;
+        flex-grow: 1;
+        @include mixins.flexbox;
+      }
     }
 
     footer {
