--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,6 +1,6 @@
+@use "fonts";
 @use "variables";
 @use "mixins";
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 h1, h2, h3, h4, h5, h6, p, img {
   margin: 0;
@@ -20,7 +20,7 @@ body {
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'formula1-regular', sans-serif;
   background: variables.$background;
 
   #root {
