--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,13 @@
 $background: #f5f5f5;
-$elemBackground: rgba(255,255,255,0.75);
 $colour-0: #f4f4f4;
 $colour-1: #EEEEEE;
 $colour-2: #C1C1C1;
 $colour-3: #9E9E9E;
-$colour-4: #747474;
-$colour-6: #525252;
-$colour-9: #151515;
+$colour-4: #89898E;
+$colour-6: #5B5B61;
+$colour-9: #2C2C34;
 $pirelli-red: #ef242d;
+$f1-red: #E10600;
 $empty: rgba($color: #000000, $alpha: 0.04);
 $error: #d32f2f;
 $shadow: 0 1px 3px rgba(0,0,0,0.22), 0 1px 2px rgba(0,0,0,0.34);
