--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -43,9 +43,15 @@ body {
         width: 100%;
         height: 60px;
         @include mixins.flexbox;
-        justify-content: flex-start;
+        justify-content: space-between;
         box-sizing: border-box;
         position: relative;
+        color: variables.$colour-4;
+
+        .nav-left {
+          height: 100%;
+          @include mixins.flexbox;
+        }
       }
 
       .content-container {
