--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -38,6 +38,7 @@ body {
       flex-flow: column nowrap;
       justify-content: space-between;
       overflow: hidden;
+      color: variables.$colour-4;
 
       nav {
         width: 100%;
@@ -46,7 +47,6 @@ body {
         justify-content: space-between;
         box-sizing: border-box;
         position: relative;
-        color: variables.$colour-4;
 
         .nav-left {
           height: 100%;
@@ -58,6 +58,30 @@ body {
         width: 100%;
         flex-grow: 1;
         @include mixins.flexbox;
+        flex-flow: column nowrap;
+
+        h5 {
+          cursor: pointer;
+          font-weight: 300;
+          margin-top: 20px;
+
+          &:hover {
+            color: black;
+          }
+        }
+
+        form {
+          width: 100%;
+          @include mixins.flexbox;
+          flex-flow: column nowrap;
+
+          .mui-form-el {
+            width: 50%;
+            margin-bottom: 20px;
+          }:last-child {
+            margin: 0;
+          }
+        }
       }
     }
 
