--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,3 +11,4 @@ $f1-red: #E10600;
 $empty: rgba($color: #000000, $alpha: 0.04);
 $error: #d32f2f;
 $shadow: 0 1px 3px rgba(0,0,0,0.22), 0 1px 2px rgba(0,0,0,0.34);
+$mui-border: #CCCCCC;
