--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -21,6 +21,11 @@
     @include mixins.flexbox;
     border-radius: 50%;
 
+    p {
+      width: 90%;
+      text-align: center;
+    }
+
     img {
       width: 100%;
       height: 100%;
