--- a/src/components/utility/spinner/_spinner.scss
+++ b/src/components/utility/spinner/_spinner.scss
@@ -1,26 +1,7 @@
 @use '../../../scss/keyframes';
-@use '../../../scss/variables';
 
 .spinner {
-  width: 60px;
-  height: 60px;
-  border: 10px solid variables.$colour-9;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-.spinner::after {
-  content: '';  
-  box-sizing: border-box;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 52px;
-  height: 52px;
-  border-radius: 50%;
-  border: 3px solid;
-  border-color: variables.$pirelli-red transparent;
+  width: 10%;
+  aspect-ratio: 1 / 1;
+  animation: rotation 0.5s linear infinite;
 }
