--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -42,6 +42,10 @@
   &:hover {
     border: 1px solid black;
   }
+
+  @media screen and ( max-width: 700px ) {
+    width: 65%;
+  }
 }
 
 .dropzone-error {
