--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -25,6 +25,7 @@ body {
 
   #root {
     @include mixins.flexbox;
+    flex-flow: column nowrap;
     width: 100%;
     height: 100%;
 
@@ -37,16 +38,18 @@ body {
       @include mixins.flexbox;
       flex-flow: column nowrap;
       justify-content: space-between;
-      overflow: hidden;
+      overflow: scroll;
       color: variables.$colour-4;
 
       nav {
         width: 100%;
         height: 60px;
         @include mixins.flexbox;
+        flex-shrink: 0;
         justify-content: space-between;
         box-sizing: border-box;
         position: relative;
+        margin-bottom: 20px;
 
         .nav-left {
           height: 100%;
@@ -81,6 +84,10 @@ body {
           }:last-child {
             margin: 0;
           }
+
+          .mui-form-btn {
+            margin: 20px 0;
+          }
         }
       }
     }
@@ -110,6 +117,30 @@ body {
         &:hover {
           color: black;
         }
+      }
+    }
+
+    @media screen and ( max-width: 700px ) {
+      background: white;
+
+      main {
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+        border-radius: 0px;
+
+        nav {
+          margin-bottom: 40px;
+        }
+
+        .mui-form-el {
+          width: 80% !important;
+        }
+      }
+
+      footer {
+        position: relative;
+        margin-top: 20px;
       }
     }
   }
