--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -49,7 +49,7 @@ body {
         justify-content: space-between;
         box-sizing: border-box;
         position: relative;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
 
         .nav-left {
           height: 100%;
@@ -62,6 +62,11 @@ body {
         flex-grow: 1;
         @include mixins.flexbox;
         flex-flow: column nowrap;
+
+        .profile-name {
+          margin-bottom: 20px;
+          color: black;
+        }
 
         h5 {
           cursor: pointer;
@@ -89,6 +94,10 @@ body {
             margin: 20px 0;
           }
         }
+      }
+
+      .flex-start {
+        justify-content: start;
       }
     }
 
@@ -128,10 +137,6 @@ body {
         height: 100%;
         box-shadow: none;
         border-radius: 0px;
-
-        nav {
-          margin-bottom: 40px;
-        }
 
         .mui-form-el {
           width: 80% !important;
