--- a/src/components/nav/navItem/_navItem.scss
+++ b/src/components/nav/navItem/_navItem.scss
@@ -4,16 +4,12 @@
 
 .nav-item {
   height: 100%;
-  padding: 0 20px;
   @include mixins.flexbox;
   cursor: pointer;
   position: relative;
   overflow: hidden;
   transition: background 300ms;
-
-  &:first-child {
-    padding-left: 40px;
-  }
+  padding-right: 20px;
 
   &:hover {
     color: black;
