--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -5,20 +5,21 @@
 .dropzone {
   width: 50%;
   aspect-ratio: 1 / 1;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   cursor: pointer;
-  border: 1px solid variables.$mui-border;
   border-radius: 50%;
   @include mixins.flexbox;
-  padding: 10px;
+  padding: 7px;
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
+  box-shadow: variables.$shadow-surround;
+  font-size: 14px;
 
   .inside-border {
     width: 100%;
     height: 100%;
-    border: 2px dashed variables.$mui-border;
+    border: 1px dashed variables.$mui-border;
     @include mixins.flexbox;
     border-radius: 50%;
 
@@ -36,11 +37,13 @@
   }
   
   .drag-active {
-    border: 2px dashed black;
+    border: 1px dashed black;
   }
 
   &:hover {
-    border: 1px solid black;
+    .inside-border {
+      border: 1px dashed black;
+    }
   }
 
   @media screen and ( max-width: 700px ) {
@@ -52,7 +55,7 @@
   border: 1px solid variables.$error;
 
   .inside-border {
-    border: 2px dashed variables.$error;
+    border: 1px dashed variables.$error;
   }
 
   &:hover {
