--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -30,8 +30,8 @@ body {
     height: 100%;
 
     main {
-      width: 600px;
-      height: 80%;
+      width: 450px;
+      max-height: 80%;
       border-radius: 25px;
       background: white;
       box-shadow: variables.$shadow;
@@ -40,6 +40,7 @@ body {
       justify-content: space-between;
       overflow: scroll;
       color: variables.$colour-4;
+      position: relative;
 
       nav {
         width: 100%;
@@ -49,11 +50,13 @@ body {
         justify-content: space-between;
         box-sizing: border-box;
         position: relative;
-        margin-bottom: 40px;
+        z-index: 1000;
+        margin-bottom: 50px;
 
         .nav-left {
           height: 100%;
           @include mixins.flexbox;
+          padding-left: 7.5%;
         }
       }
 
@@ -62,9 +65,10 @@ body {
         flex-grow: 1;
         @include mixins.flexbox;
         flex-flow: column nowrap;
+        margin-bottom: 40px;
 
         .profile-name {
-          margin-bottom: 20px;
+          margin-bottom: 40px;
           color: black;
         }
 
@@ -84,14 +88,12 @@ body {
           flex-flow: column nowrap;
 
           .mui-form-el {
-            width: 60%;
+            width: 85%;
             margin-bottom: 20px;
-          }:last-child {
-            margin: 0;
           }
 
           .mui-form-btn {
-            margin: 20px 0;
+            margin-top: 20px;
           }
         }
       }
@@ -137,10 +139,6 @@ body {
         height: 100%;
         box-shadow: none;
         border-radius: 0px;
-
-        .mui-form-el {
-          width: 80% !important;
-        }
       }
 
       footer {
