--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -24,34 +24,29 @@ body {
   background: variables.$background;
 
   #root {
-    @include mixins.flexbox;
-    flex-flow: column nowrap;
+    @include mixins.flexbox-column;
     width: 100%;
     height: 100%;
 
     main {
       width: 450px;
-      max-height: 80%;
+      max-height: 90%;
       border-radius: 25px;
       background: white;
       box-shadow: variables.$shadow;
-      @include mixins.flexbox;
-      flex-flow: column nowrap;
-      justify-content: space-between;
-      overflow: scroll;
+      @include mixins.flexbox-space-between-column;
+      overflow: hidden;
       color: variables.$colour-4;
       position: relative;
 
       nav {
         width: 100%;
         height: 60px;
-        @include mixins.flexbox;
+        @include mixins.flexbox-space-between;
         flex-shrink: 0;
-        justify-content: space-between;
         box-sizing: border-box;
         position: relative;
         z-index: 1000;
-        margin-bottom: 50px;
 
         .nav-left {
           height: 100%;
@@ -62,44 +57,115 @@ body {
 
       .content-container {
         width: 100%;
+        @include mixins.flexbox-start-column;
         flex-grow: 1;
-        @include mixins.flexbox;
-        flex-flow: column nowrap;
-        margin-bottom: 40px;
+        z-index: 0;
+        overflow-y: scroll;
+        padding: 20px 0;
 
-        .profile-name {
-          margin-bottom: 40px;
-          color: black;
+        .mui-form-el {
+          width: 85%;
+          margin-bottom: 20px;
+          background: white;
         }
 
-        h5 {
-          cursor: pointer;
-          font-weight: 300;
+        .mui-form-btn {
           margin-top: 20px;
+        }
+
+        .form-container {
+          width: 100%;
+          @include mixins.flexbox-space-between-column;
+          flex-grow: 1;
+          padding-top: 20px;
+
+          form {
+            width: 100%;
+            @include mixins.flexbox-column;
+            padding: 40px 0;
+          }
+  
+          .form-background {
+            position: absolute;
+            top: 0;
+            width: 150%;
+            opacity: 0.7;
+            z-index: -1;
+            transition: variables.$trans-speed;
+          }
+
+          .form-title {
+            width: 85%;
+            @include mixins.flexbox-start-column;
+            align-items: start;
+            color: variables.$colour-6;
+
+            h2 {
+              @include mixins.flexbox-start;
+              transition: variables.$trans-speed;
+            }
+  
+            .clickable {
+              cursor: pointer;
+              color: variables.$colour-4;
+
+              &:hover {
+                color: black;
+              }
+            }
+          }
+
+          .form-notification {
+            width: 85%;
+            padding: 20px;
+            box-sizing: border-box;
+            text-align: center;
+            color: variables.$colour-6;
+            margin: 40px 0;
+
+            p {
+              margin-bottom: 20px;
+            }
+
+            :last-child {
+              margin: 0;
+            }
+          }
+
+          .under-form-text {
+            margin-top: 200px;
+          }
+        }
+
+        .under-form-text {
+          text-align: center;
+          font-weight: 300;
+          cursor: pointer;
+          transition: variables.$trans-speed;
 
           &:hover {
             color: black;
           }
         }
 
-        form {
+        .sign-up-container {
           width: 100%;
           @include mixins.flexbox;
-          flex-flow: column nowrap;
+          padding: 20px 0;
 
-          .mui-form-el {
-            width: 85%;
-            margin-bottom: 20px;
+          :first-child {
+            pointer-events: none;
+            margin-right: 5px;
           }
 
-          .mui-form-btn {
-            margin-top: 20px;
+          .sign-up {
+            color: variables.$mui-blue;
+
+            &:hover {
+              color: black;
+            }
           }
         }
-      }
-
-      .flex-start {
-        justify-content: start;
       }
     }
 
@@ -119,6 +185,7 @@ body {
         color: variables.$colour-3;
         display: inline-flex;
         margin: 1px 0 0 5px;
+        transition: variables.$trans-speed;
 
         svg {
           height: 16px;
@@ -130,20 +197,36 @@ body {
         }
       }
     }
+  }
+}
 
-    @media screen and ( max-width: 700px ) {
-      background: white;
-
+@media screen and ( max-width: 550px ) {
+  body {
+    background: white;
+    
+    #root {
       main {
         width: 100%;
         height: 100%;
         box-shadow: none;
         border-radius: 0px;
+        max-height: none;
+
+        .content-container {
+          .form-container {
+            .form-title {
+              margin: 0 !important;
+            }
+
+            .under-form-text {
+              margin: 0;
+            }
+          }
+        }
       }
 
       footer {
-        position: relative;
-        margin-top: 20px;
+        display: none;
       }
     }
   }
