--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -42,9 +42,26 @@
     border: 1px dashed black;
   }
 
+  .change {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    @include mixins.flexbox;
+    background: white;
+    color: black;
+    transition: variables.$trans-speed;
+
+
+  }
+
   &:hover {
     .inside-border {
       border: 1px dashed black;
+    }
+
+    .change {
+      opacity: 0.7;
     }
   }
 }
