--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -51,8 +51,6 @@
     background: white;
     color: black;
     transition: variables.$trans-speed;
-
-
   }
 
   &:hover {
@@ -61,7 +59,7 @@
     }
 
     .change {
-      opacity: 0.7;
+      opacity: 0.8;
     }
   }
 }
@@ -76,4 +74,14 @@
   &:hover {
     border: 1px solid variables.$error;
   }
+}
+
+.dropzone-user-icon {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  @include mixins.flexbox;
+  background: variables.$colour-1;
+  font-size: 32px;
+  color: variables.$colour-9;
 }
