--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -86,6 +86,18 @@ body {
           margin-top: 20px;
         }
 
+        .mui-form-pagination {
+          background: none;
+          width: 100%;
+          height: 32px;
+          @include mixins.flexbox;
+
+          ul {
+            width: 100%;
+            @include mixins.flexbox-space-between;
+          }
+        }
+
         .form-container {
           width: 100%;
           @include mixins.flexbox-space-between-column;
