--- a/src/components/utility/formElContainer/_formElContainer.scss
+++ b/src/components/utility/formElContainer/_formElContainer.scss
@@ -9,24 +9,33 @@
   position: relative;
   padding: 25px 12px 8px;
   box-sizing: border-box;
-  overflow: hidden;
   border-bottom: 1px solid rgba(0, 0, 0, 0.42);
   @include mixins.flexbox;
   transition: variables.$trans-speed;
 
-  .mui-background {
+  .mui-background-wrapper {
     width: 100%;
     height: 100%;
-    pointer-events: none;
     position: absolute;
     top: 0;
     left: 0;
+    overflow: hidden;
 
-    label {
-      color: rgba(0, 0, 0, 0.6);
+    .mui-background {
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+  
+      label {
+        color: rgba(0, 0, 0, 0.6);
+        z-index: 0;
+      }
+    }::after {
+      border-bottom: none !important;
     }
-  }::after {
-    border-bottom: none !important;
   }
 }
 
