--- a/src/components/utility/pointsPicker/_pointsPicker.scss
+++ b/src/components/utility/pointsPicker/_pointsPicker.scss
@@ -3,7 +3,8 @@
 
 .points-picker {
   width: 100%;
+  height: 285px;
   @include mixins.flexbox;
-  padding: 10px 20px;
+  padding: 10px 0;
   box-sizing: border-box;
 }
