--- a/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
+++ b/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
@@ -2,12 +2,12 @@
 
 .rules-and-regs-picker {
   width: 100%;
-  max-height: 240px;
+  max-height: 260px;
   @include mixins.flexbox-start-column;
   overflow-y: scroll;
   position: relative;
   z-index: 1;
   margin-top: 10px !important;
-  padding: 0 10px;
+  padding: 0 10px 20px;
   box-sizing: border-box;
 }
