--- a/src/components/utility/rulesAndRegsPicker/ruleOrReg/_ruleOrReg.scss
+++ b/src/components/utility/rulesAndRegsPicker/ruleOrReg/_ruleOrReg.scss
@@ -7,7 +7,7 @@
   @include mixins.flexbox-start-column;
   box-sizing: border-box;
   flex-shrink: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
   h4, p {
     color: variables.$colour-6;
@@ -36,5 +36,69 @@
 
   .subsection {
     margin-top: 10px !important;
+  }
+
+  .toolbar {
+    width: 100%;
+    height: 24px;
+    padding: 0 0 0 30px;
+    box-sizing: border-box;
+    margin-top: 5px !important;
+    
+    .button, .text-button {
+      margin: 0 5px 0 0;
+      width: 22px;
+      height: 22px;
+      border-radius: 22px;
+      transition: variables.$trans-speed;
+
+      svg {
+        width: 18px;
+        height: 18px;
+      }
+    }
+
+    .text-button {
+      pointer-events: none;
+      width: auto;
+    }
+
+    .edit {
+      background: variables.$mui-blue;
+      color: white;
+
+      svg {
+        width: 14px;
+        height: 14px;
+      }
+
+      &:hover {
+        background: variables.$mui-blue-hover;
+      }
+    }
+
+    .delete {
+      background: variables.$delete;
+      color: white;
+
+      &:hover {
+        background: variables.$delete-hover;
+      }
+    }
+
+    .global, .default {
+      p {
+        color: white;
+        transform: translateY(1px);
+      }
+    }
+
+    .global {
+      background: variables.$mui-blue;
+    }
+
+    .default {
+      background: variables.$colour-4;
+    }
   }
 }
