--- a/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
+++ b/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
@@ -1,13 +1,34 @@
 @use '../../../scss/mixins';
+@use '../../../scss/variables';
 
 .rules-and-regs-picker {
   width: 100%;
-  max-height: 260px;
+  max-height: 310px;
   @include mixins.flexbox-start-column;
-  overflow-y: scroll;
   position: relative;
   z-index: 1;
   margin-top: 10px !important;
-  padding: 0 10px 20px;
-  box-sizing: border-box;
+
+  .rules-and-regs-list {
+    width: 100%;
+    flex-grow: 1;
+    overflow-y: scroll;
+    box-sizing: border-box;
+    padding: 0 4px 20px;
+  }
+
+  .add-button {
+    margin: 0;
+    background: variables.$mui-success;
+    color: white;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+
+    &:hover {
+      background: variables.$mui-success-hover;
+    }
+  }
 }
