--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -72,8 +72,16 @@ body {
         overflow-y: scroll;
         padding: 20px 0;
 
-        :last-child {
+        .add-button {
           margin: 0;
+          background: variables.$mui-success;
+          color: white;
+          width: 32px;
+          height: 32px;
+      
+          &:hover {
+            background: variables.$mui-success-hover;
+          }
         }
 
         .mui-form-el {
