--- a/src/components/utility/badge/_badge.scss
+++ b/src/components/utility/badge/_badge.scss
@@ -17,9 +17,13 @@
     overflow: hidden;
     background: white;
     @include mixins.flexbox;
+    position: relative;
 
     .badge-img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
     }
   }
 
