BadgeFilterDraw and add/remove defaults

--- a/src/components/utility/badgePicker/badgePickerToolbar/_badgePickerToolbar.scss
+++ b/src/components/utility/badgePicker/badgePickerToolbar/_badgePickerToolbar.scss
@@ -3,7 +3,7 @@
 .badge-picker-toolbar {
   width: 100%;
   @include mixins.flexbox-end;
-  padding: 18px 22px;
+  padding: 10px;
   box-sizing: border-box;
   position: absolute;
   bottom: 0;
