--- a/src/components/utility/formElContainer/_formElContainer.scss
+++ b/src/components/utility/formElContainer/_formElContainer.scss
@@ -12,6 +12,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.42);
   @include mixins.flexbox;
   transition: variables.$trans-speed;
+  overflow: hidden;
 
   .mui-background-wrapper {
     width: 100%;
