--- a/src/components/utility/badgePicker/badgeFilterDraw/_badgeFilterDraw.scss
+++ b/src/components/utility/badgePicker/badgeFilterDraw/_badgeFilterDraw.scss
@@ -3,29 +3,41 @@
 
 .badge-filter-draw {
   width: 100%;
-  height: 145px;
+  height: 175px;
   position: absolute;
-  bottom: -190px;
+  bottom: -220px;
   background: variables.$colour-1;
   z-index: 10;
   padding: 18px 12px;
   transition: variables.$trans-speed;
-  @include mixins.flexbox-column;
+  @include mixins.flexbox-space-between-column;
   border-top: 1px solid rgba(0, 0, 0, 0.42);
 
   .badge-filter-options, .badge-filter-buttons {
     width: 100%;
-    padding: 0 22px;
     box-sizing: border-box;
+    padding: 0 22px;
+
+    p {
+      font-size: 14px;
+    }
   }
   
   .badge-filter-options {
     @include mixins.flexbox-start;
-    flex-grow: 1;
+    align-items: start;
+    flex-wrap: wrap;
+    padding-left: 0;
   }
 
   .badge-filter-buttons {
     @include mixins.flexbox-space-between;
+  }
+
+  .checkbox-container {
+    width: 50%;
+    @include mixins.flexbox-end;
+    flex-shrink: 0;
   }
 }
 
