--- a/src/components/utility/badgePicker/_badgePicker.scss
+++ b/src/components/utility/badgePicker/_badgePicker.scss
@@ -4,7 +4,7 @@
 .badge-picker {
   width: 100%;
   height: 330px;
-  @include mixins.flexbox-column;
+  @include mixins.flexbox-start-column;
   margin-top: 10px !important;
   box-sizing: border-box;
   position: relative;
@@ -12,7 +12,6 @@
 
   .badge-list {
     width: 100%;
-    flex-grow: 1;
     @include mixins.flexbox-start;
     align-items: start;
     flex-flow: wrap;
