--- a/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
+++ b/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
@@ -7,7 +7,7 @@
   @include mixins.flexbox-start-column;
   position: relative;
   z-index: 1;
-  margin-top: 10px !important;
+  margin-top: 10px;
 
   .rules-and-regs-list {
     width: 100%;
