--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -72,6 +72,9 @@ body {
         overflow-y: scroll;
         padding: 20px 0;
 
+        > *:last-child {
+          margin-bottom: 0;
+        }
         .add-button {
           margin: 0;
           background: variables.$mui-success;
