MUIAutocomplete async loading && DriverCard

--- a/src/components/utility/muiAutocomplete/_muiAutocomplete.scss
+++ b/src/components/utility/muiAutocomplete/_muiAutocomplete.scss
@@ -1,3 +1,13 @@
+@use '../../../scss/mixins';
+
 .mui-autocomplete {
   width: 100%;
+
+  .spinner {
+    position: absolute;
+    @include mixins.flexbox;
+    height: 100%;
+    right: 45px;
+    top: 0px;
+  }
 }
