Some Stat inputs in DriverEdit

--- a/src/components/utility/driverGroupPicker/driverEdit/_driverEdit.scss
+++ b/src/components/utility/driverGroupPicker/driverEdit/_driverEdit.scss
@@ -35,4 +35,13 @@
       color: white;
     }
   }
+
+  .driver-edit-stats {
+    width: calc(100% - 20px);
+    @include mixins.flexbox-space-between;
+
+    > * {
+      width: 48%;
+    }
+  }
 }
