icon image error style

--- a/src/components/utility/icon/_icon.scss
+++ b/src/components/utility/icon/_icon.scss
@@ -16,4 +16,15 @@
     object-fit: cover;
     position: absolute;
   }
+
+  .image-error {
+    width: 100%;
+    height: 100%;
+    background: variables.$error;
+    @include mixins.flexbox;
+
+    p {
+      color: white;
+    }
+  }
 }
