--- a/src/components/utility/teamPicker/teamEdit/_teamEdit.scss
+++ b/src/components/utility/teamPicker/teamEdit/_teamEdit.scss
@@ -1,5 +1,5 @@
-@use '../../../scss/mixins';
-@use '../../../scss/variables';
+@use '../../../../scss/mixins';
+@use '../../../../scss/variables';
 
 .team-edit {
   width: 100%;
