--- a/src/components/cards/teamCard/_teamCard.scss
+++ b/src/components/cards/teamCard/_teamCard.scss
@@ -10,13 +10,36 @@
   box-sizing: border-box;
   cursor: pointer;
   transition: variables.$trans-speed;
+  position: relative;
 
   p {
     color: variables.$colour-9;
     font-size: 14px;
+    overflow-x: scroll;
+    margin-right: 32px;
   }
   
   &:hover {
     background: rgba(0, 0, 0, 0.06);
+  }
+
+  .edit-button {
+    width: 22px;
+    height: 22px;
+    border-radius: 22px;
+    transition: variables.$trans-speed;
+    background: variables.$mui-blue;
+    color: white;
+    position: absolute;
+    right: 16px;
+
+    svg {
+      width: 14px;
+      height: 14px;
+    }
+
+    &:hover {
+      background: variables.$mui-blue-hover;
+    }
   }
 }
