newDriver, teamEdit now checks all requested teams instead of just the teams that are selected and driverCard

--- a/src/components/utility/driverPicker/_driverPicker.scss
+++ b/src/components/utility/driverPicker/_driverPicker.scss
@@ -5,21 +5,24 @@
   height: 240px;
   border-radius: 4px;
   @include mixins.flexbox-start-column;
-  overflow-y: scroll;
   flex-shrink: 0;
   margin-bottom: 20px;
+  overflow: hidden;
+  position: relative;
 
   .driver-picker-list {
     width: 100%;
     background: rgba(0, 0, 0, 0.06);
     flex-grow: 1;
     @include mixins.flexbox-start-column;
-    position: relative;
+    overflow-y: scroll;
+    padding: 8px 0;
+    box-sizing: border-box;
+  }
 
-    .add-button {
-      position: absolute;
-      bottom: 18px;
-      right: 18px;
-    }
+  .add-button {
+    position: absolute;
+    bottom: 18px;
+    right: 18px;
   }
 }
