--- a/src/components/cards/driverCard/_driverCard.scss
+++ b/src/components/cards/driverCard/_driverCard.scss
@@ -1,8 +1,45 @@
 @use '../../../scss/mixins';
+@use '../../../scss/variables';
 
 .driver-card {
   width: 100%;
-  height: 40px;
+  height: 44px;
   @include mixins.flexbox-start;
-  border-bottom: 2px solid white;
+  flex-shrink: 0;
+  padding: 6px 16px;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: variables.$trans-speed;
+  position: relative;
+
+  p {
+    color: variables.$colour-9;
+    font-size: 14px;
+    overflow-x: scroll;
+    margin-right: 32px;
+  }
+  
+  &:hover {
+    background: rgba(0, 0, 0, 0.06);
+  }
+
+  .edit-button {
+    width: 22px;
+    height: 22px;
+    border-radius: 22px;
+    transition: variables.$trans-speed;
+    background: variables.$mui-blue;
+    color: white;
+    position: absolute;
+    right: 16px;
+
+    svg {
+      width: 14px;
+      height: 14px;
+    }
+
+    &:hover {
+      background: variables.$mui-blue-hover;
+    }
+  }
 }
