--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $colour-6: #5B5B61;
 $colour-9: #2C2C34;
 $pirelli-red: #ef242d;
 $f1-red: #E10600;
+$f1-red-hover: #cf0600;
 $empty: rgba($color: #000000, $alpha: 0.04);
 $error: #d32f2f;
 $shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
