--- a/src/components/utility/rulesAndRegsPicker/rulesAndRegsToolbar/_rulesAndRegsToolbar.scss
+++ b/src/components/utility/rulesAndRegsPicker/rulesAndRegsToolbar/_rulesAndRegsToolbar.scss
@@ -1,6 +1,6 @@
 @use '../../../../scss/mixins';
 
-.badge-picker-toolbar {
+.rules-and-regs-toolbar {
   width: 100%;
   @include mixins.flexbox-end;
   padding: 20px;
