--- a/src/components/utility/badgePicker/badgePickerEdit/_badgePickerEdit.scss
+++ b/src/components/utility/badgePicker/badgePickerEdit/_badgePickerEdit.scss
@@ -3,43 +3,24 @@
 
 .badge-picker-edit {
   width: 100%;
-  height: 330px;
-  margin-top: 10px !important;
   @include mixins.flexbox-start-column;
+  flex-shrink: 0;
+  padding: 20px 7.5%;
+  box-sizing: border-box;
+  background: white;
   overflow-y: scroll;
-  position: relative;
-  z-index: 1;
 
   h4 {
     width: 100%;
     color: variables.$colour-6;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-align: left;
   }
 
   .badge-wrapper {
-    width: 42px;
+    width: 60%;
     margin-bottom: 40px;
     position: relative;
     @include mixins.flexbox;
-  }
-
-  .mui-el {
-    width: calc(100% - 20px);
-    margin-bottom: 20px;
-  }
-
-  .button-bar {
-    width: calc(100% - 20px);
-    @include mixins.flexbox;
-    justify-content: space-evenly;
-    margin: 20px 0;
-    position: relative;
-    z-index: 99;
-
-    .mui-button-back {
-      background: variables.$colour-4;
-      color: white;
-    }
   }
 }
