--- a/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
+++ b/src/components/utility/rulesAndRegsPicker/_rulesAndRegsPicker.scss
@@ -3,11 +3,10 @@
 
 .rules-and-regs-picker {
   width: 100%;
-  max-height: 340px;
   @include mixins.flexbox-start-column;
-  position: relative;
-  z-index: 1;
-  margin-top: 10px;
+  background: white;
+  padding: 20px 7.5%;
+  box-sizing: border-box;
 
   .rules-and-regs-list {
     width: 100%;
@@ -15,11 +14,5 @@
     overflow-y: scroll;
     box-sizing: border-box;
     padding: 0 4px 20px;
-  }
-
-  .add-button {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
   }
 }
