--- a/src/components/utility/rulesAndRegsPicker/rulesAndRegsEdit/_rulesAndRegsEdit.scss
+++ b/src/components/utility/rulesAndRegsPicker/rulesAndRegsEdit/_rulesAndRegsEdit.scss
@@ -3,17 +3,19 @@
 
 .rules-and-regs-edit {
   width: 100%;
-  height: 340px;
-  margin-top: 10px !important;
+  min-height: 500px;
   @include mixins.flexbox-start-column;
+  flex-shrink: 0;
+  padding: 20px 7.5%;
+  box-sizing: border-box;
+  background: white;
   overflow-y: scroll;
-  position: relative;
-  z-index: 1;
+  flex-grow: 1;
 
   h4 {
     width: 100%;
     color: variables.$colour-6;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-align: left;
   }
   
@@ -25,7 +27,11 @@
     @include mixins.flexbox-start-column;
 
     .mui-multiline {
-      width: calc(100% - 20px);
+      width: 100%;
+
+      label {
+        color: variables.$colour-9;
+      }
       
       textarea {
         font-size: 13px;
@@ -53,18 +59,8 @@
     }
   }
 
-  .button-bar {
-    width: 100%;
-    @include mixins.flexbox;
-    justify-content: space-evenly;
-    margin-bottom: 20px !important;
-    position: relative;
-    z-index: 99;
-
-    .mui-button-back {
-      background: variables.$colour-4;
-      color: white;
-    }
+  .sub-btns {
+    margin-bottom: 78.5px;
 
     .sub-add-button {
       background: variables.$mui-success;
