--- a/src/components/utility/teamPicker/_teamPicker.scss
+++ b/src/components/utility/teamPicker/_teamPicker.scss
@@ -1,7 +1,7 @@
 @use '../../../scss/mixins';
 
 .team-picker {
-  width: calc(100% - 20px);
+  width: 100%;
   height: 240px;
   border-radius: 4px;
   @include mixins.flexbox-start-column;
@@ -21,7 +21,6 @@
   }
 
   .add-button {
-    position: absolute;
     bottom: 16px;
     right: 16px;
   }
