--- a/src/components/utility/teamPicker/teamEdit/_teamEdit.scss
+++ b/src/components/utility/teamPicker/teamEdit/_teamEdit.scss
@@ -3,35 +3,21 @@
 
 .team-edit {
   width: 100%;
-  height: 340px;
-  position: relative;
-  z-index: 1;
-  margin-top: 10px;
   @include mixins.flexbox-start-column;
-  overflow-y: scroll;
+  flex-shrink: 0;
+  padding: 20px 7.5%;
+  box-sizing: border-box;
+  background: white;
 
   h4 {
     width: 100%;
     color: variables.$colour-6;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-align: left;
   }
 
-  .mui-el, .button-bar {
-    width: calc(100% - 20px);
-    margin-bottom: 20px;
-  }
-
-  .button-bar {
-    @include mixins.flexbox;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    position: relative;
-    z-index: 99;
-
-    .mui-button-back {
-      background: variables.$colour-4;
-      color: white;
-    }
+  .dropzone {
+    width: 60%;
+    margin-bottom: 60px !important;
   }
 }
