Handling empty arrays for Create Champ form

--- a/src/components/cards/champCompleteCard/_champCompleteCard.scss
+++ b/src/components/cards/champCompleteCard/_champCompleteCard.scss
@@ -1,4 +1,5 @@
 @use '../../../scss/variables';
+@use '../../../scss/mixins';
 
 .champ-complete-card {
   width: 100%;
@@ -9,12 +10,20 @@
   .champ-complete-text-container {
     padding: 20px 7.5%;
     box-sizing: border-box;
-  }
 
-  h4 {
-    width: 100%;
-    color: variables.$colour-6;
-    margin-bottom: 20px;
-    text-align: left;
+    .champ-complete-title {
+      width: 100%;
+      @include mixins.flexbox-start;
+      color: variables.$colour-6;
+      margin-bottom: 16px;
+
+      h4 {
+        margin-right: 5px;
+      }
+
+      svg {
+        margin-bottom: 4px;
+      }
+    }
   }
 }
