CreateChamp with shrinking header on scroll.

--- a/src/components/cards/champHeaderCard/_champHeaderCard.scss
+++ b/src/components/cards/champHeaderCard/_champHeaderCard.scss
@@ -1,15 +1,28 @@
 @use '../../../scss/mixins';
+@use '../../../scss/variables';
 
 .champ-header-card {
   width: 100%;
-  @include mixins.flexbox-start-column;
+  @include mixins.flexbox-end-column;
   flex-shrink: 0;
   padding: 20px 0;
   box-sizing: border-box;
   background: white;
-  margin-bottom: 2px;
+  border-bottom: 2px solid variables.$background;
+  position: sticky;
+  overflow: hidden;
+  top: -98px;
+  z-index: 5;
 
   .form-title {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+  }
+
+  .champ-header-stepper {
+    width: 85%;
+    @include mixins.flexbox;
+    margin-top: 20px;
+    position: sticky;
+    top: 0;
   }
 }
