--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -34,7 +34,7 @@ body {
 
     main {
       width: 450px;
-      max-height: 80%;
+      max-height: 80vh;
       border-radius: 25px;
       background: white;
       box-shadow: variables.$shadow;
@@ -67,9 +67,8 @@ body {
       .content-container {
         width: 100%;
         @include mixins.flexbox-start-column;
-        flex-grow: 1;
         z-index: 0;
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: 20px 0;
 
         .form-background {
