--- a/src/components/cards/driverGroupCard/_driverGroupCard.scss
+++ b/src/components/cards/driverGroupCard/_driverGroupCard.scss
@@ -13,6 +13,19 @@
   box-sizing: border-box;
   overflow: hidden;
 
+  .main-icon-container {
+    width: 80px;
+    height: 80px;
+    flex-shrink: 0;
+    position: relative;
+
+    > :last-child {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+
   .driver-group-content {
     height: 100%;
     flex-grow: 1;
@@ -21,7 +34,7 @@
     margin-left: 20px;
     overflow: hidden;
 
-    p {
+    .driver-group-title {
       width: 100%;
       color: variables.$colour-6;
       margin-bottom: 8px;
@@ -33,8 +46,8 @@
       width: 100%;
       @include mixins.flexbox-start;
 
-      .icon {
-        margin-right: 5px;
+      > *:not(:first-child) {
+        margin-left: 5px;
       }
     }
   }
