--- a/src/components/utility/badge/_badge.scss
+++ b/src/components/utility/badge/_badge.scss
@@ -25,6 +25,18 @@
       object-fit: cover;
       position: absolute;
     }
+
+    .image-error {
+      width: 100%;
+      height: 100%;
+      background: variables.$error;
+      @include mixins.flexbox;
+  
+      p {
+        color: white;
+        font-size: 12px;
+      }
+    }
   }
 
   .edit-button {
