--- a/src/components/utility/dropZone/_dropZone.scss
+++ b/src/components/utility/dropZone/_dropZone.scss
@@ -77,7 +77,7 @@
   }
 }
 
-.dropzone-user-icon {
+.dropzone-user-icon, .dropzone-image-error {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -85,6 +85,14 @@
   background: variables.$colour-1;
   font-size: 32px;
   color: variables.$colour-9;
+}
+
+.dropzone-image-error {
+  background: variables.$error;
+
+  p {
+    color: white;
+  }
 }
 
 .dropzone-disabled {
