--- a/src/components/utility/icon/_icon.scss
+++ b/src/components/utility/icon/_icon.scss
@@ -1,31 +1,25 @@
 @use '../../../scss/variables';
 @use '../../../scss/mixins';
 
-.icon {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
+.icon, .icon-small, .icon-medium, .icon-large, .icon-contained {
   box-shadow: variables.$shadow-close;
   @include mixins.flexbox;
   overflow: hidden;
   position: relative;
   flex-shrink: 0;
+  flex-grow: 0;
+  pointer-events: none;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+}
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-  }
+.icon-medium {
+  width: 32px;
+  height: 32px;
+}
 
-  .image-error {
-    width: 100%;
-    height: 100%;
-    background: variables.$error;
-    @include mixins.flexbox;
-
-    p {
-      color: white;
-    }
-  }
+.icon-contained {
+  width: 100%;
+  height: 100%;
 }
