--- a/src/components/utility/icon/counterIcon/_counterIcon.scss
+++ b/src/components/utility/icon/counterIcon/_counterIcon.scss
@@ -1,7 +1,7 @@
 @use '../../../../scss/variables';
 @use '../../../../scss/mixins';
 
-.icon-counter {
+.counter-icon {
   width: 32px;
   height: 32px;
   border-radius: 50%;
