--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -70,6 +70,7 @@ body {
         z-index: 0;
         overflow-y: auto;
         padding: 20px 0;
+        min-height: 200px;
 
         .form-background {
           position: absolute;
@@ -118,24 +119,10 @@ body {
           box-sizing: border-box;
         }
 
-        .add-button {
-          margin: 0;
-          background: variables.$mui-success;
-          color: white;
-          width: 32px;
-          height: 32px;
-          position: absolute;
-          bottom: 20px;
-          right: 20px;
-      
-          &:hover {
-            background: variables.$mui-success-hover;
-          }
-        }
-
         .mui-form-el {
           width: 100%;
           margin-bottom: 20px;
+          background: white;
         }
 
         .mui-form-btn {
@@ -151,7 +138,8 @@ body {
           form {
             width: 100%;
             @include mixins.flexbox-column;
-            padding: 40px 0;
+            padding: 60px 7.5% 20px;
+            box-sizing: border-box;
           }
 
           .form-notification {
