Moved groups state outside of DriverGroupPicker & newDriverGroup populates groups with new driver group

--- a/src/components/cards/driverGroupCard/_driverGroupCard.scss
+++ b/src/components/cards/driverGroupCard/_driverGroupCard.scss
@@ -39,7 +39,8 @@
       color: variables.$colour-9;
       margin-bottom: 8px;
       text-transform: capitalize;
-      overflow-y: scroll;
+      overflow-wrap: break-word;
+      font-size: 15px;
     }
 
     .driver-group-drivers {
